2006-03-27 Scott Dattalo <scott@dattalo.com>
	* gui/gui_watch.cc:
	- Watch window was causing segv for the case when a watched
	register did not have an entry in the symbol table.
	- Fixed a bug where the "hex" attribute was being repeatedly added
	to the eXdbm data base. Note this fix was only applied to
	non-WIN32 OSes
	* gui/gui_regwin.cc, gui/gui_regwin.h: The register window cells
	were not getting resized correctly whenever the font was
	changed. Also, the default font was changed to Monospace.
	
2006-03-24 Scott Dattalo <scott@dattalo.com>
	* src/symbol.h, src/symbol.cc: Added a convenience function for
	searching the symbol table for strings.
	* src/processor.h, src/processor.cc: Change FileContext::Add
	method to accept only a const char *.
	
2006-03-24 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/processor.cc: The FileContext class now
	handles list files.
	* gui/gui_src_asm.cc, gui/gui_src.h, gui/gui_menu.cc: Breakpoints
	can be manipulated through the list file view of the source
	browser.
	Switching pages in the source browser now updates the margin.
	The preferences editor 'Margins' and 'Tabs' were combined into
	just 'Margins'.

2006-03-22 J.R. Heisey <jrheisey@sourceforge.com
	* config_win32.h.in, plat/win32/fd2raw.cpp: Removed strndup()
	for Visual Studio. Using g_strndup() from glib instead
	* src/os_dependent.cc, src/modules.h: Change parameter of 
	free_error_message() from char * to const char * to go along with the change to
	get_error_message().
	* gpsim/gpsim.vcproj: Changed library from readline-static.lib to
	readline.lib in the debug build which is the correct debug library file.

2006-03-22 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc, gui/gui_symbols.cc: use glib's g_strndup() instead
	of strndup.

2006-03-22 J.R. Heisey <jrheisey@sourceforge.com
	* config_win32.h.in, plat/win32/fd2raw.cpp: Created strndup()
	function for Visual Studio build.

2006-03-22 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: